[package]
name = "rustlrc"
version = "0.1.0"
edition = "2021"

[dependencies]
audiotags = "0.5.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"]}
walkdir = "2"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1